--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,7 @@
 [workspace]
 
 members = [
-    "framework",
-    "framework/examples/reldb",
-    "framework/examples/web-basic",
-    "framework/examples/web-client",
-    "framework/examples/cache",
-    "framework/examples/mq",
-    "framework/examples/todos",
+    "basic",
+    "core/iam",
+    "services/bios-all",
 ]
