--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -18,17 +18,13 @@ codegen-units = 1
 name = "bios_basic"
 path = "src/lib.rs"
 
-[features]
-sdk = ["tardis/web-client"]
-kernel = ["tardis/reldb", "tardis/cache", "tardis/mq", "tardis/web-client", "sea-orm"]
-service = ["kernel", "tardis/web-server", "poem-openapi"]
-test = ["tardis/test"]
-
 [dependencies]
-tardis = { version = "0.1.0-alpha4" }
-poem-openapi = { version = "^1.3", optional = true }
-sea-orm = { version = "^0.6", features = ["macros"], optional = true }
+tardis = { version = "0.1.0-alpha4", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
+poem-openapi = { version = "^1.3" }
+sea-orm = { version = "^0.6", features = ["macros"] }
+
+serde = { version = "^1", features = ["derive"] }
+derive_more = { version = "^0" }
 
 [dev-dependencies]
-tokio = { version = "^1", features = ["time", "rt", "macros"] }
-
+tardis = { version = "0.1.0-alpha4", features = ["test"] }
