--- a/core/iam/Cargo.toml
+++ b/core/iam/Cargo.toml
@@ -18,18 +18,22 @@ codegen-units = 1
 name = "bios_com_iam"
 path = "src/lib.rs"
 
-[features]
-sdk = ["tardis/web-client"]
-kernel = ["tardis/reldb", "tardis/cache", "tardis/mq", "tardis/web-client", "sea-orm"]
-service = ["kernel", "tardis/web-server", "poem-openapi"]
-test = ["tardis/test"]
-
 [dependencies]
 bios-basic = { path = "../../basic" }
-tardis = { version = "0.1.0-alpha4" }
-poem-openapi = { version = "^1.3", optional = true }
-sea-orm = { version = "^0.6", features = ["macros"], optional = true }
+tardis = { version = "0.1.0-alpha4", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
+poem-openapi = { version = "^1.3", features = ["chrono"] }
+sea-orm = { version = "^0.6", features = ["macros"] }
+sea-query ={ version = "^0.21"}
+
+serde = { version = "^1", features = ["derive"] }
+derive_more = { version = "^0" }
+chrono = { version = "^0.4" }
+async-trait = { version = "^0" }
+
 
 [dev-dependencies]
-tokio = { version = "^1", features = ["time", "rt", "macros"] }
+tardis = { version = "0.1.0-alpha4", features = ["test"] }
+testcontainers = { version = "^0" }
 
+[[test]]
+name = "test_rbum"
