--- a/services/bios-all/Cargo.toml
+++ b/services/bios-all/Cargo.toml
@@ -18,5 +18,5 @@ codegen-units = 1
 serde = { version = "^1", features = ["derive"] }
 tardis = { version = "0.1.0-alpha4" }
 
-bios-com-iam = { path="../../core/iam",features=["service"] }
+bios-com-iam = { path = "../../core/iam" }
 
