--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -19,7 +19,8 @@ name = "bios_basic"
 path = "src/lib.rs"
 
 [dependencies]
-tardis = { version = "0.1.0-alpha4", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
+# TODO
+tardis = { path = "../../tardis", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
 poem-openapi = { version = "^1.3" }
 sea-orm = { version = "^0.6", features = ["macros"] }
 
@@ -27,4 +28,5 @@ serde = { version = "^1", features = ["derive"] }
 derive_more = { version = "^0" }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha4", features = ["test"] }
+# TODO
+tardis = { path = "../../tardis", features = ["test"] }
