--- a/core/iam/Cargo.toml
+++ b/core/iam/Cargo.toml
@@ -20,19 +20,17 @@ path = "src/lib.rs"
 
 [dependencies]
 bios-basic = { path = "../../basic" }
-tardis = { version = "0.1.0-alpha4", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
+# TODO
+tardis = { path = "../../../tardis", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
 poem-openapi = { version = "^1.3", features = ["chrono"] }
 sea-orm = { version = "^0.6", features = ["macros"] }
-sea-query ={ version = "^0.21"}
 
 serde = { version = "^1", features = ["derive"] }
 derive_more = { version = "^0" }
-chrono = { version = "^0.4" }
-async-trait = { version = "^0" }
-
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha4", features = ["test"] }
+# TODO
+tardis = { path = "../../../tardis", features = ["test"] }
 testcontainers = { version = "^0" }
 
 [[test]]
