--- a/core/iam/Cargo.toml
+++ b/core/iam/Cargo.toml
@@ -25,6 +25,7 @@ tardis = { path = "../../../tardis", features = ["reldb", "cache", "mq", "web-se
 poem-openapi = { version = "^1.3", features = ["chrono"] }
 sea-orm = { version = "^0.6", features = ["macros"] }
 
+lazy_static = { version = "^1" }
 serde = { version = "^1", features = ["derive"] }
 derive_more = { version = "^0" }
 
