--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -18,17 +18,21 @@ codegen-units = 1
 name = "bios_basic"
 path = "src/lib.rs"
 
-[dependencies]
-# TODO
-tardis = { path = "../../tardis", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
-poem-openapi = { version = "^1.3" }
-sea-orm = { version = "^0.6", features = ["macros"] }
+[features]
+default = ["tardis", "tardis/crypto", "tardis/web-server", "tardis/web-client", "tardis/reldb", "tardis/cache", "tardis/mq", "poem-openapi", "sea-orm"]
+sdk = ["tardis", "tardis/web-client", "poem-openapi"]
 
+[dependencies]
 serde = { version = "^1", features = ["derive"] }
 derive_more = { version = "^0" }
+async-trait = { version = "^0"}
+lazy_static = { version = "^1" }
+
+tardis = { path = "../../tardis", optional = true }
+poem-openapi = { version = "^1.3", optional = true }
+sea-orm = { version = "^0.6", features = ["macros"], optional = true }
 
 [dev-dependencies]
-# TODO
 tardis = { path = "../../tardis", features = ["test"] }
 
 testcontainers = { version = "^0" }
