--- a/core/iam/Cargo.toml
+++ b/core/iam/Cargo.toml
@@ -19,14 +19,15 @@ name = "bios_iam"
 path = "src/lib.rs"
 
 [dependencies]
+serde = { version = "^1", features = ["derive"] }
+derive_more = { version = "^0" }
+async-trait = { version = "^0" }
+
 bios-basic = { path = "../../basic" }
 # TODO
 tardis = { path = "../../../tardis", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
 poem-openapi = { version = "^1.3", features = ["chrono"] }
 sea-orm = { version = "^0.6", features = ["macros"] }
-
-serde = { version = "^1", features = ["derive"] }
-derive_more = { version = "^0" }
 
 [dev-dependencies]
 # TODO
