Modify the rbum kernel model to remove rel_app_code, making the kernel model more stable.

--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "^1", features = ["derive"] }
 derive_more = { version = "^0" }
 async-trait = { version = "^0" }
 lazy_static = { version = "^1" }
+itertools = { version = "^0" }
 
 
 tardis = { path = "../../tardis", optional = true }
