--- a/services/bios-all/config/conf-default.toml
+++ b/services/bios-all/config/conf-default.toml
@@ -1,21 +1,26 @@
-[app]
+[cs]
+[cs.iam]
+[cs.iam.rbum]
+set_cate_sys_code_node_len = 4
+
+[fw]
+[fw.app]
 id = "bios-serv-all"
 name = "BIOS All Services"
 desc = "BIOS All Services"
 version = "0.1.0"
 
-[web_server]
+[fw.web_server]
 port = 8081
-[[web_server.modules]]
-code = "iam"
+[fw.web_server.modules.iam]
 title = "IAM Component"
 doc_urls = [["test env", "http://localhost:8081/"]]
 
-[db]
+[fw.db]
 url = "mysql://root:123456@localhost:3306/test"
 
-[cache]
+[fw.cache]
 url = "redis://123456@127.0.0.1:6379"
 
-[mq]
+[fw.mq]
 url = "amqp://user:123456@127.0.0.1:5672/%2f"
