--- a/core/iam/Cargo.toml
+++ b/core/iam/Cargo.toml
@@ -22,6 +22,7 @@ path = "src/lib.rs"
 serde = { version = "^1", features = ["derive"] }
 derive_more = { version = "^0" }
 async-trait = { version = "^0" }
+lazy_static = { version = "^1" }
 
 bios-basic = { path = "../../basic" }
 # TODO
