--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -19,7 +19,9 @@ name = "bios_basic"
 path = "src/lib.rs"
 
 [features]
-default = ["tardis", "tardis/crypto", "tardis/web-server", "tardis/web-client", "tardis/reldb", "tardis/cache", "tardis/mq", "poem-openapi", "sea-orm"]
+default = ["tardis", "tardis/crypto", "tardis/web-server", "tardis/web-client", "tardis/reldb", "poem-openapi", "sea-orm"]
+with-mq = ["tardis/mq"]
+with-cache = ["tardis/cache"]
 sdk = ["tardis", "tardis/web-client", "poem-openapi"]
 
 [dependencies]
@@ -36,3 +38,7 @@ sea-orm = { version = "^0.7", features = ["macros"], optional = true }
 
 [dev-dependencies]
 tardis = { path = "../../tardis", features = ["test"] }
+
+[[test]]
+name = "test_rbum"
+required-features = ["default", "with-mq", "with-cache"]
