--- a/core/iam/Cargo.toml
+++ b/core/iam/Cargo.toml
@@ -26,7 +26,7 @@ lazy_static = { version = "^1" }
 
 bios-basic = { path = "../../basic", features = ["default", "with-mq", "with-cache"] }
 # TODO
-tardis = { path = "../../../tardis", features = ["reldb", "cache", "mq", "web-server", "web-client"] }
+tardis = { path = "../../../tardis", features = ["reldb", "cache", "mq", "web-server", "web-client", "mail"] }
 poem-openapi = { version = "^1.3", features = ["chrono"] }
 sea-orm = { version = "^0.7", features = ["macros"] }
 
