--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -37,7 +37,8 @@ poem-openapi = { version = "^1.3", optional = true }
 sea-orm = { version = "^0.7", features = ["macros"], optional = true }
 
 [dev-dependencies]
-tardis = { path = "../../tardis", features = ["test"] }
+tardis = { path = "../../tardis", features = ["test", "reldb", "sea-orm"] }
+sea-orm = { version = "^0.7", features = ["macros"] }
 
 [[test]]
 name = "test_rbum"
