--- a/baas/modules/iam/Cargo.toml
+++ b/baas/modules/iam/Cargo.toml
@@ -12,7 +12,9 @@ readme = "README.adoc"
 
 [profile.release]
 lto = true
+strip = true
 codegen-units = 1
+opt-level = "z"
 
 [lib]
 name = "bios_baas_iam"
