Gateway: Add image build & push workflows.

--- a/.github/workflows/gateway-docker.yml
+++ b/.github/workflows/gateway-docker.yml
@@ -24,6 +24,6 @@ jobs:
           directory: core/gateway
           dockerfile: core/gateway/Dockerfile
           registry: ghcr.io
-          image: ideal-world/bios-gateway
+          image: bios-gateway
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
