--- a/.github/workflows/service-all-docker.yml
+++ b/.github/workflows/service-all-docker.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Check format
         run: cargo fmt --all -- --check
 
-      - name: Check with clippy
-        run: cargo clippy --all-features
+#      - name: Check with clippy
+#        run: cargo clippy --all-features
 
       - name: Build rust
         run: cargo build --release
