Try add image build & push workflows for bios services.

--- a/.github/workflows/service-all-docker.yml
+++ b/.github/workflows/service-all-docker.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Build rust
         run: cargo build --release
 
+      - name: Test
+        run: echo $(pwd)
+
       - name: Copy binary to workspace
         run: cp ../../target/release/bios-serv-all ./
 
