Try add image build & push workflows for bios services.

--- a/.github/workflows/service-all-docker.yml
+++ b/.github/workflows/service-all-docker.yml
@@ -29,8 +29,17 @@ jobs:
       - name: Cache rust
         uses: Swatinem/rust-cache@v1
 
+      - name: Test1
+        run: echo $(pwd)
+
       - name: Go to service directory
-        run: cd services/bios-all
+        run: cd ./services/bios-all
+
+      - name: Test2
+        run: echo $(pwd)
+
+      - name: Test3
+        run: echo $(ls -l)
 
       - name: Check format
         run: cargo fmt --all -- --check
@@ -40,9 +49,6 @@ jobs:
 
       - name: Build rust
         run: cargo build --release
-
-      - name: Test
-        run: echo $(pwd)
 
       - name: Copy binary to workspace
         run: cp ../../target/release/bios-serv-all ./
