--- a/services/bios-all/Dockerfile
+++ b/services/bios-all/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu
 
 RUN mkdir -p /usr/local/bios & mkdir -p /usr/local/bios/config
-COPY ./bios-serv-all ./bios-serv-all
+COPY ./bios-serv-all /usr/local/bios/bios-serv-all
+
+EXPOSE 8080
 
 CMD ["bios-serv-all"]
