--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -27,8 +27,7 @@ sdk = ["tardis", "tardis/web-client", "poem-openapi"]
 [dependencies]
 serde = { version = "^1", features = ["derive"] }
 derive_more = { version = "^0" }
-# TODO temporary fix: consider adding an explicit lifetime bound...: `DetailResp: 'async_trait`
-async-trait = { version = "=0.1.53" }
+async-trait = { version = "^0.1" }
 lazy_static = { version = "^1" }
 itertools = { version = "^0" }
 
