--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -25,19 +25,19 @@ with-mq = ["tardis/mq"]
 sdk = ["tardis", "tardis/web-client", "poem-openapi"]
 
 [dependencies]
-serde = { version = "^1", features = ["derive"] }
-derive_more = { version = "^0" }
-async-trait = { version = "^0.1" }
-lazy_static = { version = "^1" }
-itertools = { version = "^0" }
-fancy-regex = { version = "^0" }
-tardis = { version = "0.1.0-alpha15", optional = true }
-poem-openapi = { version = "^2", optional = true }
-sea-orm = { version = "^0.8", features = ["macros"], optional = true }
+serde = { version = "1", features = ["derive"] }
+derive_more = { version = "0" }
+async-trait = { version = "0.1" }
+lazy_static = { version = "1" }
+itertools = { version = "0" }
+fancy-regex = { version = "0" }
+tardis = { verison = "0.1.0-alpha16", optional = true }
+poem-openapi = { version = "2", optional = true }
+sea-orm = { version = "0.9", features = ["macros"], optional = true }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha15", features = ["test", "reldb", "sea-orm"] }
-sea-orm = { version = "^0.8", features = ["macros"] }
+tardis = { verison = "0.1.0-alpha16", features = ["test", "reldb", "sea-orm"] }
+sea-orm = { version = "0.9", features = ["macros"] }
 
 [[test]]
 name = "test_rbum"
