Upgrade apisix version.

--- a/core/gateway/Dockerfile
+++ b/core/gateway/Dockerfile
@@ -1,14 +1,14 @@
 FROM alpine:3.13 AS etcd-stage
 
-ARG ETCD_VERSION="v3.4.18"
+ARG ETCD_VERSION="3.5.4"
 
 WORKDIR /tmp
 
-RUN wget https://github.com/etcd-io/etcd/releases/download/${ETCD_VERSION}/etcd-${ETCD_VERSION}-linux-amd64.tar.gz \
-    && tar -zxvf etcd-${ETCD_VERSION}-linux-amd64.tar.gz \
-    && mv etcd-${ETCD_VERSION}-linux-amd64 etcd
+RUN wget https://github.com/etcd-io/etcd/releases/download/v${ETCD_VERSION}/etcd-v${ETCD_VERSION}-linux-amd64.tar.gz \
+    && tar -zxvf etcd-v${ETCD_VERSION}-linux-amd64.tar.gz \
+    && mv etcd-v${ETCD_VERSION}-linux-amd64 etcd
 
-FROM apache/apisix:2.14.1-alpine
+FROM apache/apisix:2.15.0-alpine
 
 COPY --from=etcd-stage /tmp/etcd/etcd /usr/bin/etcd
 COPY --from=etcd-stage /tmp/etcd/etcdctl /usr/bin/etcdctl
