--- a/services/bios-all/Dockerfile
+++ b/services/bios-all/Dockerfile
@@ -1,5 +1,8 @@
 FROM ubuntu
 
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 WORKDIR /bios
 
 RUN mkdir -p ./config/locale/
