--- a/core/iam/tests/config/conf-default.toml
+++ b/core/iam/tests/config/conf-default.toml
@@ -63,3 +63,10 @@ FZygs8miAhWPzqnpmgTj1cPiU1M=
 [fw.web_server.modules.iam]
 title = "IAM Component"
 doc_urls = [["test env", "http://localhost:8080/"]]
+
+[fw.mail]
+smtp_host = "smtp.163.com"
+smtp_port = 25
+smtp_username = "17743125563@163.com"
+smtp_password = "SYHJKAIJWKONUONP"
+default_from = "研运一体"
