--- a/services/bios-all/Dockerfile
+++ b/services/bios-all/Dockerfile
@@ -10,7 +10,7 @@ COPY ./config/locale/ ./config/locale/
 COPY ./bios-serv-all ./bios-serv-all
 
 RUN apt update 
-RUN apt install --reinstall ca-certificates
+RUN apt install -y --reinstall ca-certificates
 RUN update-ca-certificates -f
 RUN  echo 'ca_certificate=/etc/ssl/certs/ca-certificates.crt'  >> /root/.wgetrc 
 
