--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 members = [
     "basic",
     "core/iam",
-    "core/db-reldb",
-    "ext/chat/*",
+    # "core/db-reldb",
+    # "ext/chat/*",
     "services/bios-all",
 ]
