Upgarde to tardis 0.1.0-alpha31.

--- a/basic/Cargo.toml
+++ b/basic/Cargo.toml
@@ -27,8 +27,8 @@ default = [
     "tardis/web-client",
     "tardis/reldb",
     "tardis/cache",
-    "tardis/reldb",
 ]
+# TODO remvoe
 with-mq = ["tardis/mq"]
 sdk = ["tardis", "tardis/web-client"]
 
@@ -38,10 +38,10 @@ async-trait = { version = "0.1" }
 lazy_static = { version = "1" }
 itertools = { version = "0" }
 fancy-regex = { version = "0" }
-tardis = { version = "0.1.0-alpha30", optional = true }
+tardis = { version = "0.1.0-alpha31", optional = true }
 
 [dev-dependencies]
-tardis = { version = "0.1.0-alpha30", features = ["test", "reldb", "sea-orm"] }
+tardis = { version = "0.1.0-alpha31", features = ["test"] }
 
 [[test]]
 name = "test_rbum"
